--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         .font_center {font-weight:bold; text-align: center;}
         .font_head { font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: larger;}
         .font_main { font-family: Arial, Helvetica, sans-serif; font-size: 30px;}
+        .font_article { font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 2em;}
+         body > div > section > article > div > div { font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 20px;}
         .menu { height: 120px; width: 100%; background-color: mediumpurple; } 
         .back_white {background-color: white;}
         .menu_btn {width: 150px; height: 70; background-color: palegreen;
@@ -19,22 +21,39 @@
         .menu_btn > a {line-height: 70px; text-decoration: none;}
         .videoset {margin-top :80px; height: 900px; width: 1500px;}
         .video_border {border : 10px solid gold; border-radius: 5px; padding: 0px 10px;}
-        .aside {height: 2500px; width: 173px; background-color: blue;}
-        .patchsize {height: 300px; width: 1000px;margin-top:10px;}
+        .aside {height: 2530px; width: 173px; background-color: white;}
+        .patchsize {height: 330px; width: 1000px;margin-top:10px;}
+        .patchdetailsize {height: 280px; width: 950px; overflow-y: scroll;}
         .champsize {height: 450px; width: 1000px;margin-top:10px;}
-        .loginsize {height: 300px; width: 400px; margin-top:10px; margin-left:20px;}
+        #itemsize {height: 400px; width: 1462.5px;margin-top:10px;}
+        .loginsize {height: 330px; width: 400px; margin-top:10px; margin-left:20px;}
+        .logindetailsize {height: 330px; width: 400px; margin-top:10px; margin-left:45px;}
         .ranksize {height: 450px; width: 400px; margin-top:10px; margin-left:20px;}
-        .blocksize01 {height: 350px; width: 1500px; margin-top:10px;}
+        .blocksize01 {height: 380px; width: 1500px; margin-top:10px;}
         .blocksize02 {height: 500px; width: 1500px; margin-top:10px;}
-        .blocksize03 {height: 350px; width: 1500px; margin-top:10px;}
-        .articlespace {margin-bottom: 50px;}
-
+        .blocksize03 {height: 440px; width: 1500px; margin-top:10px;}
+        .articlespace {margin-bottom: 30px;}
+        .deco { text-decoration: none;}
+        #loginbtn {height: 50px; width:96px; border: 2px solid black; text-align: center; line-height: 50px;}
+        #findbtn {height: 50px; width:150px; border: 2px solid black; text-align: center; line-height: 50px;}
+        #signbtn {height: 50px; width:150px; border: 2px solid black; text-align: center; line-height: 50px;}
+        .player {height: 50px; width: 150px; text-align: center; line-height: 50px; font-size: 22px;}
+        .point { height: 50px; width: 230px; border: 2px solid black; font-size: 17px; line-height: 50px;}
+        #showchamp {height: 120px; width:310px; border: 2px solid black; text-align: center; line-height: 50px; }
+        #champimg {width:350px;}
+        #champdetails {height: 400px; width: 950px; overflow-y: scroll;}
+        #moreplayer {height: 80px; width: 390px; border: 2px solid black; text-align: center; line-height: 80px; font-size: 35px;}
+        #Itemdetail {height: 330px; width: 1000px; overflow-y: scroll;}
+        #Itemimg {height: 330px; width: 330px;}
+        #company {margin-left: 250px;}
+        #contact {margin-left: 250px; text-align: left;}
+        #logo {margin-left: 400px; }
     </style>
 </head>
 <body class="background">
     <div>
         <header>
-            <img src="project/image/riot.png" class="leftside back_white" alt="라이엇 로고" width="120" >
+            <img src="image/riot.png" class="leftside back_white" alt="라이엇 로고" width="120" >
             <div class="menu">
                 <div class="rightside hover_btn font_main menu_btn font_center">
                     <a href="#">제작자</a>
@@ -50,34 +69,189 @@
                 </div>
             </div>
         </header>
-        <aside class="aside leftside">
+        <aside id="leftBlank" class="aside leftside">
             공백
         </aside>
         <section class="leftside">
-            <article id="introvideo" class="articlespace">
+            <article id="introvideo" class="articlespace font_article">
                 <div >
                     <video class="videoset video_border" autoplay="autoplay" poster="http:\\placehold.it/1920x1080">
                         <source src="#" type="#">
                     </video>
                 </div>
             </article>
-            <article class="video_border blocksize01 articlespace">
-                <div id="patch note" class="patchsize leftside video_border"> 패치노트</div>
-                <div id="login" class="loginsize leftside video_border">로그인</div>
+            <article id="Patchnote" class="video_border blocksize01 articlespace font_article">
+                <div id="patch note" class="patchsize leftside "> Patch Note (11.02)
+                    <div class="video_border patchdetailsize">
+                    Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..Patch Note Details..
+                    </div>
+                </div>
+                <div id="login" class="loginsize leftside video_border">Login
+                    <div class="logindetailsize">
+                        <table>
+                            <form>
+                                <tr>
+                                    <td>
+                                        <label for="id">ID </label>
+                                    </td>
+                                    <td>
+                                        <input id="id" type="text" name="id" value="Your ID"><br>
+                                    </td>
+                                    <td rowspan="2">
+                                        <div id="loginbtn">
+                                            <a href="#" class="deco">Login</a>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <label for="pwd">PW </label>
+                                    </td>
+                                    <td>
+                                        <input id="pwd" type="text" name="pwd" value="Your Password">
+                                    </td>
+                                </tr>
+                            </form>
+                        </table><br>
+                        <table>
+                            <tr>
+                                <td>
+                                    <div id="findbtn">
+                                        <a href="#" class="deco">Find ID/PW</a>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div id="signbtn">
+                                        <a href="#" class="deco">Sign Up</a>
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
+                        <table>
+                            <tr>
+                                <td>
+                                    <div id="showchamp">
+                                        Now You don't have any Champion.<br>Please Sign in!
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
             </article>
-            <article class="video_border blocksize02 articlespace">
-                <div id="champ" class="champsize leftside video_border">챔피언</div>
-                <div id="rank" class="ranksize leftside video_border">랭커</div>
+            <article id="Today'sChampion" class="video_border blocksize02 articlespace font_article">
+                <div id="champ" class="champsize leftside"> Today's Champion
+                    <div id="champdetails" class="video_border rightside">
+                        <img src="image/riot.png" id="champimg" class="rightside"  alt="챔피언이미지" >
+                        Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...Champion's Details...
+                    </div>
+                </div>
+                <div id="rank" class="ranksize leftside video_border">Now's Ranker<br>
+                    <table>
+                        <tr>
+                            <td>
+                                <div class="player">
+                                    <a href="http://fow.kr/find/hideonbush" class="deco">Hide on Bush</a>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="point">
+                                    <img src="/project/image/riot.png" class="leftside" width="50px">
+                                    <div class="rightside"> GrandMaster 300</div>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                    <hr>
+                    <table>
+                        <tr>
+                            <td>
+                                <div class="player">
+                                    <a href="http://fow.kr/find/greenday" class="deco">Greenday</a>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="point">
+                                    <img src="/project/image/riot.png" class="leftside" width="50px">
+                                    <div class="rightside"> GrandMaster 30</div>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                    <hr>
+                    <table>
+                        <tr>
+                            <td>
+                                <div class="player">
+                                    <a href="http://fow.kr/find/paka" class="deco">PAKA</a>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="point">
+                                    <img src="/project/image/riot.png" class="leftside" width="50px">
+                                    <div class="rightside"> Master 70</div>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                    <hr><br>
+                    <div id="moreplayer">
+                        <a href="http://fow.kr/ranking#1" class="deco">More Ranker</a></div>
+                </div>
             </article>
-            <article class="video_border blocksize03 articlespace">
-                아이템
+            <article id="Today'sItem" class="video_border blocksize03 articlespace font_article">
+                <div id="itemsize" class="leftside">
+                    Today's Item<br>
+                    <div id="Itemdetail" class="video_border leftside">
+                        sdaf
+                    </div>
+                    <div id="Itemimg" class="video_border rightside">
+                        <img src="/project/image/riot.png" alt="템트리" width="330">
+                    </div>
+                </div>
             </article>
         </section>
-        <aside class="aside leftside">
+        <aside id="rightBlank" class="aside leftside">
             공백
         </aside>
-        <footer>
-            응애
+        <footer id="underBar">
+            <hr>
+            <div id="company" class="leftside">
+                <table>
+                    <tr>
+                        <th>사업자 번호</th>
+                        <td>100-10-74551</td>
+                    </tr>
+                    <tr>
+                        <th>(주) 라이엇</th>
+                        <td>인천 광역시 계양구 효서로 381, 1층 105호</td>
+                    </tr>
+                </table>
+            </div>
+            <div id="contact" class="leftside">
+                <table>
+                    <tr>
+                        <th>Instagram</th>
+                        <td>seoung_hn</td>
+                    </tr>
+                    <tr>
+                        <th>Face Book</th>
+                        <td>RiotGames</td>
+                    </tr>
+                    <tr>
+                        <th>Contact Us</th>
+                        <td>02-111-1111</td>
+                    </tr>
+                </table>
+            </div>
+            <div id="logo" class="leftside">
+                <table>
+                    <tr>
+                        <td><img src="/project/image/riot.png" alt="로고" width="80"></td>
+                        <td><img src="/project/image/riot.png" alt="다른 로고" width="100"></td>
+                    </tr>
+                </table>
+            </div>
         </footer>
     </div>
    
